--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,23 +24,31 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>View></a></th>
+                                <th>View</a></th>
+                                <th>Update</a></th>
+                                <th>Delete</a></th>
                             </tr>
                             </thead>
                             <tr th:each="recipe : ${recipes}">
                                 <td th:text="${recipe.id}">334</td>
                                 <td th:text="${recipe.description}">Tasty Goodnees 1</td>
-                                <td><a href="#" th:href="@{'recipe/show/' + ${recipe.id}}">View</a></td>
+                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/show'}">View</a></td>
+                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/update'}">Update</a></td>
+                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td>123</td>
                                 <td>Tasty Goodnees 2</td>
                                 <td><a href="#">View</a></td>
+                                <td><a href="#">Update</a></td>
+                                <td><a href="#">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td>12333</td>
                                 <td>Tasty Goodnees 3</td>
                                 <td><a href="#">View</a></td>
+                                <td><a href="#">Update</a></td>
+                                <td><a href="#">Delete</a></td>
                             </tr>
                         </table>
                     </div>
