--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -6,7 +6,7 @@
           th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}">
 
     <meta charset=" UTF-8"/>
-    <title>Recipe</title>
+    <title>Ingredients</title>
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
@@ -15,10 +15,17 @@
             <div class="card">
 
                 <div class="card-header bg-primary text-white">
-                    <h1 class="card-title">My Recipes!</h1>
+                    <div class="row">
+                        <div class="col-md-11">
+                            <h1 class="card-title">Ingredients</h1>
+                        </div>
+                        <div class="col-md-1">
+                            <a class="btn btn-light" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/new'}" role="button">New</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipe.ingredients)}">
                         <table class="table table-hover">
                             <thead class="thead-light">
                             <tr>
@@ -29,12 +36,12 @@
                                 <th>Delete</th>
                             </tr>
                             </thead>
-                            <tr th:each="recipe : ${recipes}">
-                                <td th:text="${recipe.id}">334</td>
-                                <td th:text="${recipe.description}">Tasty Goodnees 1</td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/update'}">Update</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
+                            <tr th:each="ingredient : ${recipe.ingredients}">
+                                <td th:text="${ingredient.id}">334</td>
+                                <td th:text="${(ingredient.amount + ' ' + ingredient.unitOfMeasure.description + ' - ' + ingredient.description)}">2 Teaspoons sugar</td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/show'}">View</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/update'}">Update</a></td>
+                                <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredient/' + ${ingredient.id} + '/delete'}">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td>123</td>
