--- a/src/main/resources/templates/recipe/ingredient/show.html
+++ b/src/main/resources/templates/recipe/ingredient/show.html
@@ -6,42 +6,32 @@
           th:href="@{/webjars/bootstrap/4.1.3/css/bootstrap.min.css}">
 
     <meta charset=" UTF-8"/>
-    <title>Recipe</title>
+    <title>View Ingredient</title>
 </head>
 <body>
 <div class="container-fluid" style="margin-top: 20px">
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="card">
-
                 <div class="card-header bg-primary text-white">
-                    <h1 class="card-title">My Recipes!</h1>
+                    <h1 class="card-title">Ingredient</h1>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive" th:if="${not #lists.isEmpty(recipes)}">
+                    <div class="table-responsive">
                         <table class="table table-hover">
                             <thead class="thead-light">
                             <tr>
                                 <th>ID</th>
                                 <th>Description</th>
-                                <th>View</th>
-                                <th>Update</th>
-                                <th>Delete</th>
                             </tr>
                             </thead>
-                            <tr th:each="recipe : ${recipes}">
-                                <td th:text="${recipe.id}">334</td>
-                                <td th:text="${recipe.description}">Tasty Goodnees 1</td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/show'}">View</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/update'}">Update</a></td>
-                                <td><a href="#" th:href="@{'recipe/' + ${recipe.id} + '/delete'}">Delete</a></td>
+                            <tr>
+                                <td th:text="${ingredient.id}">334</td>
+                                <td th:text="${(ingredient.amount + ' ' + ingredient.unitOfMeasure.description + ' - ' + ingredient.description)}">2 Teaspoons sugar</td>
                             </tr>
                             <tr th:remove="all">
                                 <td>123</td>
                                 <td>Tasty Goodnees 2</td>
-                                <td><a href="#">View</a></td>
-                                <td><a href="#">Update</a></td>
-                                <td><a href="#">Delete</a></td>
                             </tr>
                             <tr th:remove="all">
                                 <td>12333</td>
