--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -15,6 +15,11 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <form  th:object="${recipe}" th:action="@{/recipe/}" method="post">
+
+                <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
+                    <p>Please Correct Errors Below</p>
+                </div>
+
                 <input type="hidden" th:field="*{id}"/>
                 <div class="card-columns" style="column-count: 1">
                     <div class="card">
@@ -24,10 +29,16 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-9 form-group">
-                                    <label>Recipe Description:</label>
-                                    <input type="text" class="form-control" th:field="*{description}"/>
+                                    <label for="description" th:text="#{recipe.description}">Recipe Description:</label>
+                                    <input type="text"
+                                           class="form-control is-invalid" th:class="${#fields.hasErrors('description')} ? 'form-control is-invalid' : 'form-control'"
+                                           id="description" name="description" th:field="*{description}"
+                                           placeholder="Description"/>
+                                    <div class="invalid-feedback" th:each="err : ${#fields.errors('description')}" th:text="${err}">error1</div>
+                                    <div class="invalid-feedback" th:remove="all">error2</div>
                                 </div>
                             </div>
+
                             <div class="row">
                                 <div class="col-md-3 form-group">
                                     <label>Categories:</label>
@@ -49,34 +60,56 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-3 form-group">
-                                    <label>Prep Time:</label>
-                                    <input type="text" class="form-control" th:field="*{prepTime}"/>
+                                    <label for="prepTime">Prep Time:</label>
+                                    <input type="text"
+                                           class="form-control is-invalid" th:class="${#fields.hasErrors('prepTime')} ? 'form-control is-invalid' : 'form-control'"
+                                           id="prepTime" name="prepTime" th:field="*{prepTime}"
+                                           placeholder="Description"/>
+                                    <div class="invalid-feedback" th:each="err : ${#fields.errors('prepTime')}" th:text="${err}">error1</div>
+                                    <div class="invalid-feedback" th:remove="all">error2</div>
                                 </div>
                                 <div class="col-md-3 form-group">
-                                    <label>Cooktime:</label>
-                                    <input type="text" class="form-control" th:field="*{cookTime}"/>
+                                    <label for="cookTime">Cook Time:</label>
+                                    <input type="text"
+                                           class="form-control is-invalid" th:class="${#fields.hasErrors('cookTime')} ? 'form-control is-invalid' : 'form-control'"
+                                           id="cookTime" name="cookTime" th:field="*{cookTime}"
+                                           placeholder="Description"/>
+                                    <div class="invalid-feedback" th:each="err : ${#fields.errors('cookTime')}" th:text="${err}">error1</div>
+                                    <div class="invalid-feedback" th:remove="all">error2</div>
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Difficulty:</label>
-                                    <select class="form-control">
-                                        <option>Easy</option>
-                                        <option>Medium</option>
-                                        <option>Hard</option>
+                                    <select class="form-control" th:field="*{difficulty}">
+                                        <option th:each="difficultyValue : ${T(codegeeks.spring5recipe.domain.Difficulty).values()}"
+                                                th:value="${difficultyValue.name()}"
+                                                th:text ="${difficultyValue.name()}">Easy</option>
+                                        <option value="Medium" th:remove="all">Medium</option>
+                                        <option value="Hard" th:remove="all"> Hard</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-3 form-group">
-                                    <label>Servings:</label>
-                                    <input type="text" class="form-control" th:field="*{servings}"/>
+                                    <label for="servings">Cook Time:</label>
+                                    <input type="text"
+                                           class="form-control is-invalid" th:class="${#fields.hasErrors('servings')} ? 'form-control is-invalid' : 'form-control'"
+                                           id="servings" name="servings" th:field="*{servings}"
+                                           placeholder="Description"/>
+                                    <div class="invalid-feedback" th:each="err : ${#fields.errors('servings')}" th:text="${err}">error1</div>
+                                    <div class="invalid-feedback" th:remove="all">error2</div>
                                 </div>
                                 <div class="col-md-3 form-group">
                                     <label>Source:</label>
                                     <input type="text" class="form-control" th:field="*{source}"/>
                                 </div>
                                 <div class="col-md-3 form-group">
-                                    <label>URL:</label>
-                                    <input type="text" class="form-control" th:field="*{url}"/>
+                                    <label for="url">URL:</label>
+                                    <input type="text"
+                                           class="form-control is-invalid" th:class="${#fields.hasErrors('url')} ? 'form-control is-invalid' : 'form-control'"
+                                           id="url" name="url" th:field="*{url}"
+                                           placeholder="Description"/>
+                                    <div class="invalid-feedback" th:each="err : ${#fields.errors('url')}" th:text="${err}">error1</div>
+                                    <div class="invalid-feedback" th:remove="all">error2</div>
                                 </div>
                             </div>
                         </div>
@@ -84,11 +117,11 @@
                     <div class="card">
                         <div class="card-header bg-primary text-white">
                             <div class="row">
-                                <div class="col-md-11 ">
+                                <div class="col-md-11">
                                     <h1 class="card-title">Ingredients</h1>
                                 </div>
                                 <div class="col-md-1">
-                                    <a class="btn btn-default" href="#" role="button">Edit</a>
+                                    <a class="btn btn-light" href="#" th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}" role="button">Edit</a>
                                 </div>
                             </div>
                         </div>
