--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -17,19 +17,34 @@
             <div class="card-columns" style="column-count: 1">
                 <div class="card">
                     <div class="card-header bg-primary text-white">
-                        <h1 class="card-title" th:text="${recipe.description}">Recipe Description Here!</h1>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <h1 class="card-title" th:text="${recipe.description}">Recipe Description Here!</h1>
+                            </div>
+                            <div class="col-md-3">
+                                <a class="btn btn-light" href="#"
+                                   th:href="@{'/recipe/' + ${recipe.id} + '/image'}" role="button">Change Image</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-3">
                                 <h5>Categories:</h5>
                             </div>
-                            <div class="col-md-9">
+                            <div class="col-md-3">
                                 <ul>
-                                    <li th:each="category : ${recipe.categories}" th:text="${category.description}">cat one</li>
+                                    <li th:each="category : ${recipe.categories}" th:text="${category.description}">cat
+                                        one
+                                    </li>
                                     <li th:remove="all">cat two</li>
                                     <li th:remove="all">cat three</li>
                                 </ul>
+                            </div>
+                            <div class="col-md-6">
+                                <img src="../../static/images/guacamole400x400WithX.jpg"
+                                     th:src="@{'/recipe/' + ${recipe.id} + '/recipeimage'}"
+                                     width="200" height="200">
                             </div>
                         </div>
                         <div class="row">
@@ -43,7 +58,8 @@
                                 <h5>Difficulty:</h5>
                             </div>
                             <div class="col-md-3">
-                                <p th:text="${recipe.difficulty} != null ? ${recipe.difficulty.toString().substring(0,1).toUpperCase()} + ${recipe.difficulty.toString().substring(1).toLowerCase()} : null">Easy</p>
+                                <p th:text="${recipe.difficulty} != null ? ${recipe.difficulty.toString().substring(0,1).toUpperCase()} + ${recipe.difficulty.toString().substring(1).toLowerCase()} : null">
+                                    Easy</p>
                             </div>
                         </div>
                         <div class="row">
@@ -85,7 +101,9 @@
                             <div class="col-md-12">
                                 <ul>
                                     <li th:each="ingredient : ${recipe.ingredients}"
-                                        th:text="${(ingredient.amount + ' ' + ingredient.unitOfMeasure.description + ' - ' + ingredient.description)}">1 Cup of tea</li>
+                                        th:text="${(ingredient.amount + ' ' + ingredient.unitOfMeasure.description + ' - ' + ingredient.description)}">
+                                        1 Cup of tea
+                                    </li>
                                     <li th:remove="all">1 Teaspoon of chocolate</li>
                                     <li th:remove="all">1 Teaspoon of Sugar</li>
                                 </ul>
@@ -100,7 +118,9 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <p th:text="${recipe.directions}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                <p th:text="${recipe.directions}">Lorem ipsum dolor sit amet, consectetuer adipiscing
+                                    elit.
+                                    Aenean commodo ligula eget
                                     dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                     nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
                                     quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet
@@ -124,7 +144,8 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <p th:text="${recipe.notes}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                <p th:text="${recipe.notes}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    Aenean commodo ligula eget
                                     dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                     nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
                                     quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet
