--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -144,7 +144,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <p th:text="${recipe.notes}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                <p th:text="${recipe.notes.recipeNotes}">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                                     Aenean commodo ligula eget
                                     dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes,
                                     nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium
